@startuml

skinparam monochrome reverse


title __MEDIATORS's Class Diagram__\n


namespace wasteless.client {

}
  namespace wasteless.server {
    namespace presentation {
      namespace mediators {
        class wasteless.server.presentation.mediators.GroceryListMediator {
            + GroceryListMediator()
            + calculateWaste()
            + createGroceryList()
            + deleteGroceryList()
            + generateJsonReport()
            + generateTextReport()
            + getAllGroceryLists()
            + getGroceryListById()
            + updateGroceryList()
        }

        class wasteless.server.presentation.mediators.ItemMediator {
                    + ItemMediator()
                    + createItem()
                    + deleteItem()
                    + getAllItems()
                    + getItemById()
                    + updateItem()
        }
         class wasteless.server.presentation.mediators.UserMediator {
                     + UserMediator()
                     + createUser()
                     + deleteUser()
                     + getActiveUser()
                     + getAllUsers()
                     + getUserById()
                     + loginUser()
                     + updateUser()
         }
      }

    }
    namespace business{
      namespace command_handler {
              class wasteless.server.business.command_handler.GroceryListCommandHandler {
                  + GroceryListCommandHandler()
                  + calculateWaste()
                  + createGroceryList()
                  + deleteGroceryList()
                  + generateJsonReport()
                  + generateTextReport()
                  + updateGroceryList()
              }

              class wasteless.server.business.command_handler.ItemCommandHandler {
                          + ItemCommandHandler()
                          + createItem()
                          + deleteItem()
                          + updateItem()
                      }

               class wasteless.server.business.command_handler.UserCommandHandler {
                          + UserCommandHandler()
                          + createUser()
                          + deleteUser()
                          + loginUser()
                          + updateUser()
                      }
      }

      namespace query_handler {
              class wasteless.server.business.query_handler.GroceryListQueryHandler {
                  + GroceryListQueryHandler()
                  + getAllGroceryLists()
                  + getGroceryListById()
              }

              class wasteless.server.business.query_handler.ItemQueryHandler {
                          + ItemQueryHandler()
                          + getAllItems()
                          + getItemById()
              }

              class wasteless.server.business.query_handler.UserQueryHandler {
                          + UserQueryHandler()
                          + getActiveUser()
                          + getAllUsers()
                          + getUserById()
              }
            }
    }
  }


  

   wasteless.client ---- wasteless.server.presentation.mediators:HTTP REQUESTS
  wasteless.server.presentation.mediators.GroceryListMediator o-- wasteless.server.business.command_handler.GroceryListCommandHandler : groceryListCommandHandler
  wasteless.server.presentation.mediators.GroceryListMediator o-- wasteless.server.business.query_handler.GroceryListQueryHandler : groceryListQueryHandler
  wasteless.server.presentation.mediators.ItemMediator o-- wasteless.server.business.command_handler.ItemCommandHandler : itemCommandHandler
  wasteless.server.presentation.mediators.ItemMediator o-- wasteless.server.business.query_handler.ItemQueryHandler : itemQueryHandler
  wasteless.server.presentation.mediators.UserMediator o-- wasteless.server.business.command_handler.UserCommandHandler : userCommandHandler
  wasteless.server.presentation.mediators.UserMediator o-- wasteless.server.business.query_handler.UserQueryHandler : userQueryHandler





right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
